problems sorting fixed, chat-messages logic privatized